Add ResponseAntity wrapper class
