# openapi-doc/survey-openapi.yaml
@@ -24,8 +24,8 @@ paths:
               required:
               - file
       responses:
-        "200":
-          description: OK
+        "201":
+          description: CREATED
           content:
             application/json:
               schema:
@@ -62,8 +62,8 @@ paths:
               required:
               - file
       responses:
-        "200":
-          description: OK
+        "201":
+          description: CREATED
           content:
             application/json:
               schema:
@@ -100,8 +100,8 @@ paths:
               required:
               - file
       responses:
-        "200":
-          description: OK
+        "201":
+          description: CREATED
           content:
             application/json:
               schema:
@@ -138,8 +138,8 @@ paths:
               required:
               - file
       responses:
-        "200":
-          description: OK
+        "201":
+          description: CREATED
           content:
             application/json:
               schema:
