# src/main/java/com/dynata/surveyhw/controllers/ParticipationController.java
@@ -11,7 +11,9 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
 import org.springframework.http.codec.multipart.FilePart;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -35,7 +37,7 @@ public class ParticipationController {
 
     @Operation(summary = "Save participations from csv file.")
     @ApiResponses(value = {
-            @ApiResponse(responseCode = "200", description = "OK",
+            @ApiResponse(responseCode = "201", description = "CREATED",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
                             array = @ArraySchema(schema = @Schema(implementation = ParticipationDto.class)))),
             @ApiResponse(responseCode = "400", description = "Runtime error: HttpStatus.BAD_REQUEST",
@@ -46,8 +48,8 @@ public class ParticipationController {
                             schema = @Schema(implementation = ExceptionResponse.class)))
     })
     @PostMapping(consumes = MediaType.MULTIPART_FORM_DATA_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
-    public Flux<ParticipationDto> uploadParticipationsCsv(@RequestPart("file") FilePart filePart) {
-        return csvService.readFromCsv(filePart, ParticipationDto.class)
-                .flatMapMany(participationService::saveParticipationDtos);
+    public ResponseEntity<Flux<ParticipationDto>> uploadParticipationsCsv(@RequestPart("file") FilePart filePart) {
+        return ResponseEntity.status(HttpStatus.CREATED).body(csvService.readFromCsv(filePart, ParticipationDto.class)
+                .flatMapMany(participationService::saveParticipationDtos));
     }
 }
