# src/main/java/com/dynata/surveyhw/controllers/SurveyController.java
@@ -12,7 +12,9 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
 import org.springframework.http.codec.multipart.FilePart;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -41,7 +43,7 @@ public class SurveyController {
 
     @Operation(summary = "Save surveys from csv file")
     @ApiResponses(value = {
-            @ApiResponse(responseCode = "200", description = "OK",
+            @ApiResponse(responseCode = "201", description = "CREATED",
                     content = @Content(mediaType = MediaType.APPLICATION_JSON_VALUE,
                             array = @ArraySchema(schema = @Schema(implementation = SurveyDto.class)))),
             @ApiResponse(responseCode = "400", description = "Runtime error: HttpStatus.BAD_REQUEST",
@@ -52,9 +54,9 @@ public class SurveyController {
                             schema = @Schema(implementation = ExceptionResponse.class)))
     })
     @PostMapping(consumes = MediaType.MULTIPART_FORM_DATA_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
-    public Flux<SurveyDto> uploadSurveysCsv(@RequestPart("file") FilePart filePart) {
-        return csvService.readFromCsv(filePart, SurveyDto.class)
-                .flatMapMany(surveyService::saveSurveyDtos);
+    public ResponseEntity<Flux<SurveyDto>> uploadSurveysCsv(@RequestPart("file") FilePart filePart) {
+        return ResponseEntity.status(HttpStatus.CREATED).body(csvService.readFromCsv(filePart, SurveyDto.class)
+                .flatMapMany(surveyService::saveSurveyDtos));
     }
 
     @Operation(summary = "Get survey list by memberId, and status is: Completed")
@@ -70,8 +72,8 @@ public class SurveyController {
                             schema = @Schema(implementation = ExceptionResponse.class)))
     })
     @GetMapping(path = "/by-member-id-and-completed", produces = MediaType.APPLICATION_JSON_VALUE)
-    public Flux<SurveyDto> getByMemberIdAndIsCompleted(@RequestParam("memberId") Long memberId) {
-        return surveyService.getByMemberIdAndIsCompleted(memberId);
+    public ResponseEntity<Flux<SurveyDto>> getByMemberIdAndIsCompleted(@RequestParam("memberId") Long memberId) {
+        return ResponseEntity.ok(surveyService.getByMemberIdAndIsCompleted(memberId));
     }
 
     @Operation(summary = "Get one member completed surveys point by memberId")
@@ -87,8 +89,9 @@ public class SurveyController {
                             schema = @Schema(implementation = ExceptionResponse.class)))
     })
     @GetMapping(path = "/by-member-id-completion-points", produces = MediaType.APPLICATION_JSON_VALUE)
-    public Mono<Map<String, Integer>> getSurveyCompletionPointsByMemberId(@RequestParam("memberId") Long memberId) {
-        return surveyService.getSurveyCompletionPointsByMemberId(memberId);
+    public ResponseEntity<Mono<Map<String, Integer>>> getSurveyCompletionPointsByMemberId(
+            @RequestParam("memberId") Long memberId) {
+        return ResponseEntity.ok(surveyService.getSurveyCompletionPointsByMemberId(memberId));
     }
 
     @Operation(summary = "Get survey statistic list")
@@ -104,7 +107,7 @@ public class SurveyController {
                             schema = @Schema(implementation = ExceptionResponse.class)))
     })
     @GetMapping(path = "/all-statistic", produces = MediaType.APPLICATION_JSON_VALUE)
-    public Flux<SurveyStatisticDto> getAllStatisticSurveys() {
-        return surveyService.getAllStatisticSurveys();
+    public ResponseEntity<Flux<SurveyStatisticDto>> getAllStatisticSurveys() {
+        return ResponseEntity.ok(surveyService.getAllStatisticSurveys());
     }
 }
